# egccri

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/actions/binary-compatible-builds/: action.yml  main.js
.github/actions/install-rust/: action.yml  main.js
.github/workflows/: main.yml  rust.yml
crates/compute-channel/: Cargo.toml
crates/compute-core/: Cargo.toml
crates/compute-scheduler/: Cargo.toml
crates/compute-storage/: Cargo.toml
crates/compute-uds/: Cargo.toml
crates/connect-ble/: Cargo.toml
crates/connect-modbus/: Cargo.toml  README.md
crates/connect-mqtt/: Cargo.toml
crates/connect-mqtt/src/: lib.rs
crates/connect-tcp/: Cargo.toml
crates/device-manager/: Cargo.toml  README.md
crates/device-manager/src/: cli.rs  lib.rs
crates/device-model/: Cargo.toml  README.md
crates/device-model/src/device/: profile.rs
crates/device-model/src/device/profile/: device_profile.rs  profile_property.rs  units.rs
crates/device-storage/: Cargo.toml  README.md
crates/device-storage-sqlite/: Cargo.toml
crates/device-storage-tdengine/: Cargo.toml
crates/device-storage/src/: device_profile.rs  lib.rs
crates/egccri-api/: Cargo.toml  build.rs
crates/egccri-api/proto/deviceprofile/: deviceprofile.proto
crates/egccri-api/src/: commands.rs  helloworld.rs
crates/egccri-api/src/commands/: device_profile_sync.rs
crates/egccri-compute-storage/: Cargo.toml
crates/egccri-compute/egccri-compute-channel/: Cargo.toml
crates/egccri-compute/egccri-compute-core/: Cargo.toml
crates/egccri-compute/egccri-compute-scheduler/: Cargo.toml
crates/egccri-compute/egccri-compute-uds/: Cargo.toml
crates/egccri-connect-ble/: Cargo.toml
crates/egccri-connect-modbus/: Cargo.toml
crates/egccri-connect-modbus/src/: lib.rs
crates/egccri-connect-mqtt/: Cargo.toml
crates/egccri-connect-mqtt/src/: lib.rs
crates/egccri-device-manager/: Cargo.toml
crates/egccri-device-manager/src/: cli.rs  lib.rs  storage.rs
crates/egccri-device-model/: Cargo.toml
crates/egccri-device-model/src/: device.rs
crates/egccri-device-model/src/device/: command.rs  device_shadow.rs
crates/egccri-device-model/src/device/profile/: device_profile.rs  device_resource.rs  profile_property.rs  property_value.rs
crates/egccri-device-storage/: Cargo.toml
crates/egccri-device-storage/src/: device_profile.rs
crates/egccri-storage-sqlite/: Cargo.toml
crates/egccri-storage-sqlite/src/: device_storage.rs  lib.rs
docs/adr/: capmsg-socket-and-qos-design.md  client-model-and-communication-design.md  connect-channel-design.md  egccri-hub-thread-model-design.md  map-rpc-messaging-design.md  metamsg-socket-and-qos-design.md  micro-module-design.md  storage-module-design.md  use-one-wasm-runtime-decision.md
egccri-client/: Cargo.toml
egccri-client/src/: commands.rs  lib.rs  resources.rs
egccri-client/src/commands/: client.rs  device_profile_sync.rs
egccri-client/src/resources/device/: device_profile_load.rs
egccri-compute/: Cargo.toml
egccri-connect/: Cargo.toml  README.md
egccri-connect/src/: cli.rs  lib.rs  main.rs  server.rs  shadow.rs
egccri-connect/src/internal/controller/: mod.rs
egccri-connect/src/networks/: clients.rs
egccri-connect/src/networks/servers/: mqtt_server.rs
egccri-connect/src/shadow/: shadow_service.rs
egccri-connect/tests/json/: device.json
egccri-core/: Cargo.toml
egccri-core/components/egccri-metadata/: Cargo.toml
egccri-core/components/egccri-streaming/: Cargo.toml
egccri-core/components/egccri-streaming/src/: schema.rs
egccri-core/components/mqtt-server/: Cargo.toml  README.md
egccri-core/components/mqtt-server/src/: lib.rs
egccri-core/src/: main.rs  networks.rs  shadow.rs
egccri-core/src/internal/: mod.rs
egccri-core/src/internal/store/: mod.rs
egccri-core/src/networks/: clients.rs  servers.rs
egccri-core/src/networks/clients/: nng_push.rs
egccri-core/src/networks/servers/: mqtt_server.rs
egccri-core/src/shadow/: shadow_service.rs
egccri-core/tests/json/: device.json
egccri-hub/: Cargo.toml  README.md
egccri-hub/src/: clients.rs  main.rs  server.rs  servers.rs
egccri-hub/src/clients/: kafka.rs
egccri-hub/src/config/: config.rs
egccri-hub/src/context/: tenant.rs
egccri-hub/src/server/: grpc_server.rs
egccri-hub/src/servers/: nng.rs
egccri-let/: Cargo.toml  README.md
egccri-model/: Cargo.toml  README.md
egccri-model/src/: device.rs
egccri-model/src/device/: device_shadow.rs  profile.rs  service.rs
egccri-model/src/device/profile/: device_profile.rs  property_value.rs
egccri-runtime/: Cargo.toml  README.md
egccri-streaming/: Cargo.toml
examples/: README.md  device_profile.json
sdk/rust/: Cargo.toml
src/: commands.rs  lib.rs
src/commands/: device.rs  run.rs  run_compute.rs  run_connect.rs  storage.rs
wit/: README.md
wit/codec/: codec.wit
wit/device/: device.wit
wit/messaging/: messaging.wit
wit/storage/: storage.wit
