[package]
name = "egccri-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
doctest = false

[[bin]]
name = "egccri"
path = "src/bin/standalone.rs"
doc = false

[dependencies]
egccri-connect = { path = "egccri-connect" }
egccri-compute = { path = "egccri-compute" }
egccri-let = { path = "egccri-let" }
clap = { workspace = true, features = ["color", "suggestions", "derive"] }
once_cell = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[workspace]
members = [
    "egccri-connect",
    "egccri-compute",
    "egccri-hub",
    "egccri-let",
    "library/micro-async-module",
    "library/module-sdk",
    "crates/egccri-connect-modbus",
    "crates/egccri-connect-mqtt",
    "crates/egccri-connect-ble",
    "crates/egccri-device-manager",
    "crates/egccri-device-model",
    "crates/egccri-storage-sqlite",
    "crates/egccri-compute-core",
    "crates/egccri-compute-uds",
    "crates/egccri-compute-channel",
    "crates/egccri-compute-scheduler",
    "crates/egccri-compute-storage",
]

[workspace.package]
version = "0.0.0"
authors = ["zifeng <zifeng.1024@gmail.com>"]
edition = "2021"

[workspace.dependencies]
clap = { version = "4.0.15", features = ["color", "suggestions", "derive"] }
once_cell = "1.15.0"
anyhow = "1.0.65"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev]
opt-level = 0

[profile.release]
panic = 'abort'
opt-level = 3