[package]
name = "egccri-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
doctest = false

[[bin]]
name = "egccri"
path = "src/bin/standalone.rs"
doc = false

[[bin]]
name = "egccri-client"
path = "src/bin/client.rs"
doc = false

[dependencies]
egccri-connect = { path = "egccri-connect" }
egccri-compute = { path = "egccri-compute" }
egccri-runtime = { path = "egccri-runtime" }
egccri-client = { path = "egccri-client" }
clap = { workspace = true, features = ["color", "suggestions", "derive"] }
once_cell = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[workspace]
members = [
    "egccri-connect",
    "egccri-compute",
    "egccri-runtime",
    "egccri-client",
    "library/micro-async-module",
    "library/pool",
    "sdk/rust",
    "crates/egccri-api",
    "crates/connect-tcp",
    "crates/connect-modbus",
    "crates/connect-mqtt",
    "crates/connect-ble",
    "crates/device-manager",
    "crates/device-model",
    "crates/device-storage",
    "crates/device-storage-sqlite",
    "crates/device-storage-tdengine",
    "crates/compute-core",
    "crates/compute-uds",
    "crates/compute-channel",
    "crates/compute-scheduler",
    "crates/compute-storage",
]

[workspace.package]
version = "0.0.0"
authors = ["zifeng <zifeng.1024@gmail.com>"]
edition = "2021"

[workspace.dependencies]
clap = { version = "4.0.15", features = ["color", "suggestions", "derive"] }
tokio = { version = "1.21.2", features = ["rt-multi-thread", "time", "macros"] }
once_cell = "1.15.0"
thiserror = "1.0.37"
anyhow = "1.0.65"
tracing = "0.1"
tracing-subscriber = "0.3"
wasmtime = "10"
wasmtime-wasi = "10"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
parity-tokio-ipc = "0.9.0"
futures = "0.3.24"
tonic = "0.8.2"
prost = "0.11.0"

[profile.dev]
opt-level = 0

[profile.release]
panic = 'abort'
opt-level = 3