[package]
name = "egccri-connect"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micro-async-module = { path = "../library/micro-async-module" }
egccri-device-model = { path = "../crates/egccri-device-model" }
egccri-device-manager = { path = "../crates/egccri-device-manager" }
egccri-storage-sqlite = { path = "../crates/egccri-storage-sqlite" }
egccri-connect-modbus = { path = "../crates/egccri-connect-modbus", optional = true }
egccri-connect-mqtt = { path = "../crates/egccri-connect-mqtt", optional = true }
tokio = { workspace = true, features = ["rt-multi-thread", "time", "macros"] }
anyhow = { workspace = true }
tracing = { workspace = true }
parity-tokio-ipc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
nng = "1.0.0"

[dev-dependencies]
tracing-subscriber = { workspace = true }

[features]
default = ["mqtt"]
mqtt = ["egccri-connect-mqtt"]
opa-ua = []
modbus = ["egccri-connect-modbus"]
