[package]
name = "egccri-connect"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micro-async-module = { path = "../library/micro-async-module" }
device-model = { path = "../crates/device-model" }
device-manager = { path = "../crates/device-manager" }
device-storage-sqlite = { path = "../crates/device-storage-sqlite" }
connect-modbus = { path = "../crates/connect-modbus", optional = true }
connect-mqtt = { path = "../crates/connect-mqtt", optional = true }
tokio = { workspace = true, features = ["rt-multi-thread", "time", "macros"] }
anyhow = { workspace = true }
tracing = { workspace = true }
parity-tokio-ipc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[features]
default = ["mqtt"]
mqtt = ["dep:connect-mqtt"]
opa-ua = []
modbus = ["dep:connect-modbus"]
