[package]
name = "egccri-hub"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egccri-device-model = { path = "../crates/egccri-device-model" }
clap = { workspace = true, features = ["color", "suggestions", "derive"] }
tokio = { version = "1.6.0", features = ["full"] }
anyhow = "1.0.40"
serde = "1.0.126"
log = "0.4.14"
log4rs = "1.0.0"
nng = "1.0.0"
pulsar = "4.1.3"
rdkafka = { version = "0.28.0", features = ["cmake-build"] }
