[package]
name = "egccri-hub"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egccri-device-model = { path = "../crates/egccri-device-model" }
egccri-api = { path = "../crates/egccri-api" }
clap = { workspace = true, features = ["color", "suggestions", "derive"] }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
serde = { workspace = true }
log = "0.4.14"
log4rs = "1.0.0"
rdkafka = { version = "0.28.0", features = ["cmake-build"] }
tonic = { workspace = true }
