[package]
name = "egccri-let"
version = "0.0.0"
authors = ["zifeng <zifeng.1024@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "1.0.1"
wasmtime-wasi = "1.0.1"
wat = "1.0.49"
wasi-experimental-http-wasmtime = "0.10.0"
anyhow = "1.0.33"