[package]
name = "egccri-let"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "1.0.1"
wasmtime-wasi = "1.0.1"
wat = "1.0.49"
#wasi-experimental-http-wasmtime = "0.10.0"
anyhow = { workspace = true }