[package]
name = "egccri-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
anyhow = { workspace = true }
wat = "1.0.49"
#wasi-experimental-http-wasmtime = "0.10.0"
