[package]
name = "egccri-device-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egccri-device-model = { path = "../egccri-device-model" }
egccri-storage-sqlite = { path = "../egccri-storage-sqlite" }
serde = "1.0.145"
serde_json = "1.0.86"
