[package]
name = "egccri-device-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micro-async-module = { path = "../../library/micro-async-module" }
egccri-device-model = { path = "../egccri-device-model" }
egccri-device-storage = { path = "../egccri-device-storage" }
egccri-storage-sqlite = { path = "../egccri-storage-sqlite" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
