[package]
name = "egccri-storage-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egccri-device-model = { path = "../egccri-device-model" }
micro-async-module = { path = "../../library/micro-async-module" }
#rusqlite = { version = "0.28.0", features = ["bundled"] }
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = "1.0.37"
lazy_static = "1.4.0"

