[package]
name = "mqtt-server"
version = "0.0.0"
authors = ["zifeng <zifeng.1024@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.1.1", features = ["full"] }
futures = "0.3.12"
bytes = "1.0.1"
bitflags = "1.2.1"
num_enum = "0.5.1"
async-trait = "0.1.42"
log = "0.4.13"
env_logger = "0.8.2"
dotenv = "0.15.0"
getset = "0.1.1"
uuid = "0.8.2"
clap = "3.0.0-beta.2"
config = "0.10"
serde = { version="1.0", features = ["derive"] }
